# rust

./: .gitignore  BUILD_SETUP.md  Cargo.toml  README.md  TODO_REMAINING.md  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  rustfmt.toml  test-websocket.html  tsconfig.json  vitest.config.ts  wrangler.toml
.github/workflows/: code-quality.yml
browser-tools/: README.md  admin.html  test-quick-match-cleanup.html  test-websocket.html
docs/: DEPLOYMENT.md  TESTING.md  TROUBLESHOOTING.md
docs/workers/: todo-rust-migration.md
docs/workers/design/: durable-objects-gamesession.md  durable-objects-message-handlers.md  durable-objects-roommanager.md  durable-objects-services.md  durable-objects-state-management.md  rust-worker-api-spec.md  rust-worker-error-handling.md  rust-worker-routing.md  rust-worker-websocket-handling.md
docs/workers/notes/: 01-current-state-analysis.md  02-rust-worker-design.md  03-gamesession-design.md  04-roommanager-design.md  05-message-mapping.md  06-client-switch-plan.md  07-server-decommission-plan.md  08-services-module-design.md
docs/workers/prompts/: README.md  implementation-guide.md  (+3 more)
src/: constants.rs  lib.rs  openapi.rs  worker-entry.ts
src/durable-objects/: gamesession.ts  index.ts  roommanager.ts  types.ts  worker.ts
src/handlers/: docs.rs  health.rs  mod.rs  root.rs
src/models/: admin.rs  benchmark.rs  calculation.rs  mod.rs  rooms.rs  welcome.rs
src/utils/: auth.rs  error.rs  mod.rs  params.rs  response.rs  response_fallback.rs
tests/: README.md
tests/e2e/: custom-room.spec.ts  quick-match.spec.ts
(+26 files in other folders)
