[package]
name = "rust"
version = "0.1.0"
edition = "2024"
description = "シンプルな計算API（Cloudflare Workers + Rust）"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5", features = ["preserve_order"] }

# リンター設定
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
